# space-io

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  INTEGRATION.md  README.md  deploy.sh  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
deploy/: .env.example  README.md  cloudformation.yaml  deploy.sh
scripts/: backup.sh  remote-deploy.sh  restore.sh
src/: config.rs  error.rs  fs_atomic.rs  lib.rs  main.rs  sso.rs  state.rs
src/agent/: mod.rs  openrouter.rs  tools.rs
src/crypto/: age_io.rs  kdf.rs  mod.rs
src/routes/: agent.rs  auth.rs  files.rs  health.rs  mod.rs  search.rs  static_files.rs
src/space/: cache.rs  create.rs  delete.rs  download.rs  excerpt.rs  git.rs  history.rs  init.rs  meta.rs  mkdir.rs  mod.rs  paths.rs  rate_limit.rs  read.rs  rename.rs  rollback.rs  search.rs  session.rs  test_helpers.rs  tree.rs  upload.rs  users.rs  write.rs
tests/: integration.rs
tests/integration/: agent.rs  auth.rs  files.rs  health.rs  persistence.rs  security.rs  static_files.rs
tests/integration/common/: mod.rs
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/api/: client.ts
web/src/components/Agent/: AgentChat.module.css  AgentChat.tsx  format.test.ts  format.ts
web/src/components/Auth/: Auth.module.css  Auth.tsx
web/src/components/ContextMenu/: ContextMenu.module.css  ContextMenu.tsx
web/src/components/Download/: DownloadModal.module.css  DownloadModal.tsx
web/src/components/History/: HistoryPanel.module.css  HistoryPanel.tsx
web/src/components/Markdown/: Markdown.module.css  Markdown.tsx
web/src/components/Passkey/: PasskeyModal.module.css  PasskeyModal.tsx
web/src/components/Preview/: DocxRenderer.module.css  DocxRenderer.tsx  PdfRenderer.module.css  PdfRenderer.tsx  Preview.module.css  Preview.tsx
web/src/components/Rail/: HearthRail.module.css  HearthRail.tsx  SpaceRail.module.css  SpaceRail.tsx
web/src/components/Reader/: Reader.module.css  Reader.tsx
web/src/components/Registration/: Registration.module.css  Registration.tsx
web/src/components/Search/: SearchOverlay.module.css  SearchOverlay.tsx
web/src/components/Shell/: HearthShell.module.css  HearthShell.tsx  SpaceShell.tsx
web/src/components/Upload/: UploadModal.module.css  UploadModal.tsx
web/src/components/Vault/: HearthCard.module.css  HearthCard.tsx  HearthVault.module.css  HearthVault.tsx  SpaceCard.module.css  SpaceCard.tsx  SpaceVault.tsx
web/src/components/VaultDialogs/: CreateFolderDialog.tsx  DeleteConfirmDialog.tsx  DialogShell.tsx  MoveDialog.tsx  RenameDialog.tsx  TagsDialog.tsx  dialog.module.css
web/src/components/WindowChrome/: WindowChrome.module.css  WindowChrome.tsx
web/src/components/icons/: Icon.tsx
web/src/lib/: calendar.test.ts  calendar.ts  format.test.ts  format.ts  markdown.test.ts  markdown.ts  passkey.ts  sanitizeHtml.hardening.test.ts  sanitizeHtml.test.ts  sanitizeHtml.ts  tree.ts  useAsyncDialog.ts  useAutosave.test.ts  useAutosave.ts
web/src/styles/: global.css  reset.css  tokens.css
web/src/types/: vite-env.d.ts
