[package]
name = "space-io"
version = "0.1.0"
edition = "2021"

[lib]
name = "space_io"
path = "src/lib.rs"

[[bin]]
name = "space-io"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal", "fs", "io-util"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["cookie"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"

# crypto
age = "0.10"
scrypt = "0.11"
rand = "0.8"
subtle = "2"
secrecy = { version = "0.10", features = ["serde"] }
zeroize = "1"
# Verifying the cloud-drive single sign-on token (HS256 JWT). Kept to small,
# audited primitives so we don't pull a full JWT/ring stack into the binary.
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# storage
walkdir = "2"
git2 = { version = "0.19", default-features = false }
hex = "0.4"

# agent (LLM chat) — talks to an OpenRouter-compatible chat API and, when a
# key is configured, the Brave web-search API. rustls keeps us off OpenSSL,
# and webpki-roots bundles the trusted CA set into the binary so TLS works on
# minimal hosts (containers, scratch images) with no system cert store.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "rustls-tls-webpki-roots"] }

# session
dashmap = "6"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3"
# Integration tests poke the live axum router via tower::ServiceExt::oneshot.
tower = "0.5"
http-body-util = "0.1"
mime = "0.3"
